<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mti_driver</name>
  <version>1.0.0</version>
  <description>ROS2 driver for XSens MTi devices.</description>
  <maintainer email="md_rafiqul.islam@adfa.edu.au">Rafiq Rana</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <!-- <depend>python-serial</depend> -->
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
